完成Chaining页面基本功能,可以进行文本输入游戏,封装了数据库连接,可以进行数据库交互.

--- a/App.config
+++ b/App.config
@@ -1,7 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Demo.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <connectionStrings>
+    <add name="Demo.Properties.Settings.dbConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Resources\DB\db.mdb;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
+  </connectionStrings>
   <appSettings>
     <add key="username" value="Zoozy"/>
     <add key="money" value="100"/>
   </appSettings>
+  <applicationSettings>
+    <Demo.Properties.Settings>
+      <setting name="Username" serializeAs="String">
+        <value />
+      </setting>
+    </Demo.Properties.Settings>
+  </applicationSettings>
 </configuration>
