完成了背景动画的封装和代码重构；重新组织目录；MapInf定义了地图信息；做好了其他需要绑定XML页面的接口

--- a/App.config
+++ b/App.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+  </configSections>
   <connectionStrings>
     <add name="dbConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Resources\DB\db.mdb;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
+    <add name="Demo.Properties.Settings.dbConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Resources\DB\db.mdb;Persist Security Info=True"
       providerName="System.Data.OleDb" />
   </connectionStrings>
 </configuration>
