--- a/trunk/App.config
+++ b/trunk/App.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+  </configSections>
   <connectionStrings>
     <add name="dbConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Resources\DB\db.mdb;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
+    <add name="Demo.Properties.Settings.dbConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Resources\DB\db.mdb;Persist Security Info=True"
       providerName="System.Data.OleDb" />
   </connectionStrings>
 </configuration>
