--- a/trunk/Demo.csproj
+++ b/trunk/Demo.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C8855B15-A9DF-4AE5-BA40-EF77D07439CF}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -107,6 +107,9 @@
     <Compile Include="Adventure.xaml.cs">
       <DependentUpon>Adventure.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CAnimalControl.xaml.cs">
+      <DependentUpon>CAnimalControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Chaining.xaml.cs">
       <DependentUpon>Chaining.xaml</DependentUpon>
     </Compile>
@@ -117,6 +120,7 @@
       <DependentUpon>GameMain.xaml</DependentUpon>
     </Compile>
     <Compile Include="GamePage.cs" />
+    <Compile Include="Global.cs" />
     <Compile Include="LoadGame.xaml.cs">
       <DependentUpon>LoadGame.xaml</DependentUpon>
     </Compile>
@@ -158,6 +162,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Adventure.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CAnimalControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -233,9 +241,12 @@
     <EmbeddedResource Include="Resources\Background\Home.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
-    <Content Include="Profile\Profile.xml">
+    <EmbeddedResource Include="Resources\Background\Grass.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Background\Sun.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
     <Content Include="Resources\DB\db.mdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
