--- a/trunk/Demo.csproj
+++ b/trunk/Demo.csproj
@@ -52,9 +52,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Expression.Prototyping.SketchControls, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="SPEECH_API, Version=1.0.3739.22995, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="SPEECH_API, Version=1.0.3739.23516, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\桌面\atk160\Debug\SPEECH_API.dll</HintPath>
+      <HintPath>.\SPEECH_API.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -121,9 +121,6 @@
     <Compile Include="Chaining.xaml.cs">
       <DependentUpon>Chaining.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Feed.xaml.cs">
-      <DependentUpon>Feed.xaml</DependentUpon>
-    </Compile>
     <Compile Include="GameMain.xaml.cs">
       <DependentUpon>GameMain.xaml</DependentUpon>
     </Compile>
@@ -178,10 +175,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Chaining.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Feed.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -258,9 +251,6 @@
     <Content Include="Resources\DB\db.mdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
