--- a/trunk/Demo.csproj
+++ b/trunk/Demo.csproj
@@ -163,6 +163,8 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="Resources\Rec\diclist" />
+    <None Include="Resources\TRec.cfg" />
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
@@ -248,9 +250,12 @@
     <EmbeddedResource Include="Resources\Background\Sun.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <Content Include="Microsoft.Expression.Prototyping.SketchControls.dll" />
     <Content Include="Resources\DB\db.mdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Resources\Rec\hmmlist.txt" />
+    <Content Include="SPEECH_API.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
